--- a/style.css
+++ b/style.css
@@ -86,3 +86,18 @@ body{
   color: #644bff;
   cursor: pointer;
 }
+.container{
+  width: 100%;
+  
+  height: 400px;
+  background-color: #efefef;
+  text-align: center;
+}
+ul,li{
+  list-style-type:none;
+  font-size: 25px;
+  }
+
+  ul{
+    padding: 20px;
+  }
